--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+//npm install ejs
 {
   "name": "laboratory-classes-3",
   "version": "1.0.0",
@@ -11,6 +12,7 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
+    "ejs": "^3.1.9",
     "laboratory-classes-3": "file:"
   },
   "devDependencies": {
